# vis4ml-service

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py
app/core/: config.py  exceptions.py  health.py  logging.py  middleware.py
app/domain/data/: __init__.py  alphabet_utils.py  entropy_utils.py  sample_generator.py
app/domain/data/api/: __init__.py  alphabet.py
app/domain/model/: __init__.py
app/domain/model/api/: __init__.py
app/domain/model/notebooks/: entropy_cal_experiment.ipynb  estimate_entropy_mnist_1.ipynb  estimate_entropy_mnist_Phil.ipynb  info_measure_behaviour.ipynb  mnist_estimate_entropy.ipynb
app/domain/model/src/: entropy.py  estimate_entropy_list.py  mutual_info.py
tests/: conftest.py  test_health.py
tests/domain/: test_data_api.py  test_model_api.py
